doctor can call 1 tool

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 .venv
 .env
 __pycache__/agent.cpython-314.pyc
-testagent/__pycache__/
+**/**/__pycache__/*
+Nurse_agent/__pycache__/__init__.cpython-314.pyc
+Nurse_agent/__pycache__/agent.cpython-314.pyc
