--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@
 # GOOGLE_API_KEY=PASTE_YOUR_ACTUAL_API_KEY_HERE
 GOOGLE_CLOUD_PROJECT=qwiklabs-gcp-01-dbb24307e00a
 GOOGLE_CLOUD_LOCATION=eu-west4
+GOOGLE_GENAI_USE_VERTEXAI=TRUE
