now you can do this for all columsn

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ datascientist_agent/__pycache__/agent.cpython-312.pyc
 Data/class.csv
 Data/zoo.csv
 Doctor/sub_agents/PatientCommunication/__pycache__/agent.cpython-314.pyc
+datascientist_agent/__pycache__/agent.cpython-312.pyc
