--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Data/class.csv
 Data/zoo.csv
 Doctor/sub_agents/PatientCommunication/__pycache__/agent.cpython-314.pyc
 datascientist_agent/__pycache__/agent.cpython-312.pyc
+presentation/~$Demo.pptx
