--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@
 GOOGLE_CLOUD_PROJECT=qwiklabs-gcp-01-dbb24307e00a
 GOOGLE_CLOUD_LOCATION=eu-west4
 GOOGLE_GENAI_USE_VERTEXAI=TRUE
+
+LITELLMAZUREMODEL=
+LITELLMAZUREAPIKEY=
+LITELLMAZUREAPIBASE=
