--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
-**/__pycache__/*.vs
-.venv
-.env
-__pycache__/agent.cpython-314.pyc
-testagent/__pycache__/
+# Environments
+.venv/
+**/.env
 
+# Python
+**/__pycache__/
+*.pyc
+
+# VS
+*.vs/
+
+# Data
 Data/post-operative-data.pickle
 temp_pickle_data/*
-datascientist_agent/__pycache__/agent.cpython-312.pyc
 Data/post-operative.data
-datascientist_agent/__pycache__/agent.cpython-312.pyc
 Data/class.csv
 Data/zoo.csv
-Doctor/sub_agents/PatientCommunication/__pycache__/agent.cpython-314.pyc
-datascientist_agent/__pycache__/agent.cpython-312.pyc
+
+# Powerpoint
 presentation/~$Demo.pptx
